--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </article>
     </main>
     <footer>
-        <p>Site criado por <a href="https://github.com/gustavoguanabara" target="_blank">Gustavo Guanabara</a> para o cursoemvideo</p>
+        <p>Site criado por <a href="https://github.com/VictorNascimento14" target="_blank">Victor Nascimento</a> para o cursoemvideo</p>
     </footer>
 </body>
 </html>
